cmake_minimum_required(VERSION 3.1)

FILE(GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
FILE(GLOB CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_EXECUTABLE(DependencyTree
		${HEADER_FILES} 
		${CPP_FILES}
)


TARGET_LINK_LIBRARIES(  DependencyTree
						) 


INSTALL(TARGETS DependencyTree
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)

